--- a/Forestta/index.html
+++ b/Forestta/index.html
@@ -13,6 +13,7 @@
       <link
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Dancing+Script:wght@400..700&family=Great+Vibes&display=swap"
         rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
