--- a/Forestta/index.html
+++ b/Forestta/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Dancing+Script:wght@400..700&family=Great+Vibes&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
       <link
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Dancing+Script:wght@400..700&family=Great+Vibes&display=swap"
         rel="stylesheet">
